# opx-system-utils

./: Makefile.am  README.md  configure.ac
debian/: changelog  control  copyright  libopx-system-utils1.install  opx-system-utils.install  rules
inc/: Makefile.am
inc/opx/: sys_utils_file_transfer.h
scripts/init/: opx-system-utils-db.service  opx-system-utils.service
scripts/lib/python/: sys_status.py  system_status_db.py
scripts/lib/python/plugins/: analytics.py  cpu.py  disk.py  fan.py  mem.py  power.py  swap.py  temp.py
scripts/lib/python/scripts/: Chart.min.js  fusioncharts.charts.js  fusioncharts.js  fusioncharts.powercharts.js  fusioncharts.theme.fint.js  gauge.min.js  jquery.min.js
scripts/lib/python/templates/: alarm.xhtml  basic_style.xhtml  bulb_script.xhtml  chart.xhtml  chart_script.xhtml  dial.xhtml  dial_script.xhtml  ma_chart_script.xhtml  main.xhtml  ms_chart_script.xhtml  temp.xhtml  thermal_script.xhtml
scripts/lib/python/unit_test/: sys_status_test.py
src/: sys_utils_file_transfer.c
src/unit_test/: dn_sys_utils_unittest.c  dn_sys_utils_unittest_gtest.cpp  run_test
